k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - "neighboros.in.th"
      secretName: mailbook-api-tls
  rules:
    - host: "neighboros.in.th"
      http:
        paths:          
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mailbook-api-clusterip-srv
              port:
                number: 80
